[gd_scene load_steps=8 format=3 uid="uid://ng3y5hcbf05g"]

[ext_resource type="FontFile" uid="uid://c5iun7xd2m3oe" path="res://Assets/Font/ShadowsIntoLight-Regular.ttf" id="1_3toh2"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_wpx61"]
[ext_resource type="Texture2D" uid="uid://cwkcwfiyvwueh" path="res://Assets/Cards/SamuraiGirl/samurai_girl.png" id="2_ctjs2"]
[ext_resource type="Texture2D" uid="uid://dkrlx1h0niuk5" path="res://Assets/Menu/bg_menu.png" id="2_pxgwv"]
[ext_resource type="Texture2D" uid="uid://c37o775jsna7h" path="res://Assets/Cards/Default/ultimate_enemy.png" id="3_hp7kl"]
[ext_resource type="Script" path="res://Scripts/BgMenu.gd" id="3_k83h4"]

[sub_resource type="LabelSettings" id="LabelSettings_wsn4d"]
font = ExtResource("1_3toh2")
font_size = 130
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="Node2D"]
script = ExtResource("1_wpx61")

[node name="BgMenu" type="Sprite2D" parent="."]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
position = Vector2(962, 542)
texture = ExtResource("2_pxgwv")
script = ExtResource("3_k83h4")

[node name="Label" type="Label" parent="."]
offset_left = 260.0
offset_top = 85.0
offset_right = 1663.0
offset_bottom = 298.0
text = "Pick Your Character"
label_settings = SubResource("LabelSettings_wsn4d")
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_right = 1924.0
offset_bottom = 1080.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
clip_contents = true
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3toh2")
theme_override_font_sizes/font_size = 70
text = "Samurai
Girl"
icon = ExtResource("2_ctjs2")

[node name="Button2" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3toh2")
theme_override_font_sizes/font_size = 70
text = "Galaxy 
Guy"
icon = ExtResource("3_hp7kl")

[node name="TutorialButton" type="Button" parent="."]
offset_left = 1550.0
offset_top = 8.0
offset_right = 1911.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("1_3toh2")
theme_override_font_sizes/font_size = 60
text = "How to play"

[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
